# hello-dagster

./: README.md  pyproject.toml
cereal/: complex_pipeline.py  hello_cereal.py  inputs.py  inputs_typed.py  pyproject.toml  repos.py  repository.yaml  serial_pipeline.py  test_complex_pipeline.py  test_hello_cereal.py  test_inputs.py
dagster-with-django-orm/: hello_django_orm.py  pyproject.toml  test_hello_django_orm.py
dagster-with-django-orm/demo/customers/: models.py
dagster-with-django-orm/demo/customers/migrations/: 0001_initial.py
dagster-with-django-orm/demo/demo/: settings.py
hello_world/: README.md  hello_dagster.py  hello_world.py  requirements.txt  test_hello_world.py
