[tool.poetry]
name = "dagster-with-django-orm"
version = "0.1.0"
description = ""
authors = ["zkan <kan@prontomarketing.com>"]

[tool.poetry.dependencies]
python = "^3.7"
dagster = "^0.7.3"
django = "^3.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
